# agent-orchestrator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agent_orchestrator/: ao.py  bus.py  cli.py  git.py  merge.py  orchestrator.py
claude_swarm/: ao.py  bus.py  cli.py  git.py  merge.py  orchestrator.py
docs/: architecture.html  commands.txt  contributing.html  docs.html  index.html  llms-full.txt  llms.txt  schema.txt  style.css
tests/: test_ao.py  test_bus.py  test_cli.py  test_git.py  test_merge.py  test_orchestrator.py
