[project]
name = "agent-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "gitpython>=3.1",
    "anthropic>=0.40",
]

[project.scripts]
agent-orchestrator = "agent_orchestrator.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
