[project]
name = "claude-swarm"
version = "0.3.1"
description = "CLI for parallel Claude Code sessions to coordinate via shared context, message bus, file claims, peer review gates, and git lock management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Lauren Alexander"},
]
keywords = ["claude", "claude-code", "swarm", "multi-agent", "coordination", "orchestrator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/laurenalexander2/claude-swarm"
Repository = "https://github.com/laurenalexander2/claude-swarm"
Issues = "https://github.com/laurenalexander2/claude-swarm/issues"

[project.scripts]
claude-swarm = "claude_swarm.cli:main"
ao = "claude_swarm.ao:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
